# aqilas-sms

./: .gitignore  pyproject.toml  setup.py
sms/: __init__.py
test/: test.py
