[tool.poetry]
name = "aqilas-sms"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "Library for aqilas sms"
authors = [{ name = "Mohamed ZEBA", email = "parice02@hotmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dynamic = ["version"]
license = { file = "LICENSE" }
dependencies = ["requests>=2.31.0"]
keywords = [
    "burkina aqilas sms",
    "aqilas sms",
    "burkina sms",
]

[project.urls]
Homepage = "https://github.com/parice02/aqilas-sms"
Issues = "https://github.com/parice02/aqilas-sms/issues"
Repository = "https://github.com/parice02/aqilas-sms.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
